add exports for PlatformUtil