@@ -26,6 +26,7 @@ java \
 --module-path /usr/share/openjfx/lib \
 --add-modules=javafx.swing,javafx.web \
 --add-exports=javafx.web/com.sun.webkit.network=ALL-UNNAMED \
+--add-exports=javafx.base/com.sun.javafx=ALL-UNNAMED \
 -Djdk.gtk.version=2.2 \
 -jar FisherMail.jar
 ```
